--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6"
-    }
+    },
+
+    "scripts": {
+    "postgresql:reset": "php utils/dbResetPostgresql.util.php"
 }
+
+}
+
