refactor (composer) added seeding

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
 
     "scripts": {
-    "postgresql:reset": "php utils/dbResetPostgresql.util.php"
+    "postgresql:reset": "php utils/dbResetPostgresql.util.php",
+    "postgresql:seed": "php utils/dbSeedPostgresql.util.php"
 }
 
 }
